css align fix

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -19,7 +19,7 @@ table {
 
 th, td {
     padding: 10px;
-    text-align: left;
+    text-align: center;
     border: 1px solid #ddd;
 }
 
